Fixed spacing of title

--- a/css/main.css
+++ b/css/main.css
@@ -239,7 +239,7 @@ a.nav-button img {
     /* border: #fff 3px solid; */
 }
 
-.project-link a:hover, .project-link a:focus {
+.project-link:hover, .project-link:focus {
     /* border: #63cdda 3px solid; */
     box-shadow: 0px 0px 16px #63cdda;
 }
@@ -320,7 +320,6 @@ div.img-cover img {
 
 .title {
     width: 100%;
-    /* margin-bottom: 0rem; */
 }
 
 .subtitle {
@@ -333,7 +332,7 @@ div.img-cover img {
 
 footer {
     margin-top: 2rem;
-    padding: 3rem;
+    padding: 3rem 2rem;
     text-align: center;
     background-color: #000;
     color: #fff;
@@ -344,6 +343,11 @@ footer .intext-link{
 }
 
 /* style for project page */
+.p-title {
+    width: 100%;
+    margin-bottom: 0rem;
+}
+
 a#nav-logo img {
     width: 3.5rem;
     cursor: pointer;
@@ -397,15 +401,6 @@ a#nav-logo img {
 .blur.lazyloaded {
 	-webkit-filter: blur(0);
 	filter: blur(0);
-}
-
-.scalable {
-    transition: all .2s ease-in-out;
-}
-
-.scalable:hover, .scalable:focus{
-    /* transform: scale(2);
-    z-index: 1; */
 }
 
 .parent{
@@ -519,6 +514,10 @@ td {
         top: 30%;
         width: 70%;
     }
+
+    h2.p-title {
+        margin-bottom: 0;
+    }
 }
 
 @media (max-width:650px){
@@ -567,7 +566,7 @@ td {
     }
 
     .subtitle {
-        margin-top: 0.6rem;
+        margin-top: 0rem;
     }
 }
 
@@ -583,6 +582,10 @@ td {
     a.nav-button {
         font-size: 0.9rem;
         margin: 0.7rem 0.25rem;
+    }
+
+    .link-item {
+        width: 90%;
     }
 }
 
